feat: experimental changes and lower buttons
The white bit looks too white, imo. The "SERVICES" bit looks a bit funny too, perhaps the gold should go or be placed somewhere else.

--- a/index2.html
+++ b/index2.html
@@ -102,35 +102,46 @@
         <p>DRIVEN BY PASSION. DEFINED BY PRECISION.</p>
     </section>
 
-
-    <div class="w-full grid grid-cols-1 md:grid-cols-3 gap-4 px-4 py-4 bg-[#29343D]">
+    <div class="flex justify-center items-center pt-10 pb-8 bg-[#29343D]">
+        <h2 class="text-white text-3xl font-light tracking-[0.4em]">SERVICES</h2>
+    </div>
+    <div class="w-full grid grid-cols-1 md:grid-cols-4 gap-4 px-4 py-4 bg-[#29343D]">
+        
         <!-- Finance Card -->
         <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
             <img src="Images/red.png" class="w-full h-full object-cover" alt="Finance" />
-            <div class="absolute inset-0 bg-black bg-opacity-10 flex flex-col justify-end items-center p-6 space-y-2">
-                <div data-lucide="handshake" class="text-white w-8 h-8"></div>
-                <div class="text-white text-2xl font-semibold">Finance</div>
-                <a href="#" class="text-white text-sm underline">See More</a>
+            <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
+                <div data-lucide="handshake" class="text-white w-10 h-10"></div>
+                <div class="text-white text-4xl font-semibold">Finance</div>
+                <a href="#" class="text-white text-lg underline">See More</a>
             </div>
         </div>
 
         <!-- Sell Your Car Card -->
         <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
             <img src="Images/yellow.png" class="w-full h-full object-cover" alt="Sell Your Car" />
-            <div class="absolute inset-0 bg-black bg-opacity-10 flex flex-col justify-end items-center p-6 space-y-2">
-                <div data-lucide="hand-coins" class="text-white w-8 h-8"></div>
-                <div class="text-white text-2xl font-semibold">Sell Your Car</div>
-                <a href="#" class="text-white text-sm underline">See More</a>
+            <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
+                <div data-lucide="hand-coins" class="text-white w-10 h-10"></div>
+                <div class="text-white text-4xl font-semibold">Sell Your Car</div>
+                <a href="#" class="text-white text-lg underline">See More</a>
             </div>
         </div>
 
         <!-- Preparation Card -->
         <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
             <img src="Images/blue.png" class="w-full h-full object-cover" alt="Preparation" />
-            <div class="absolute inset-0 bg-black bg-opacity-10 flex flex-col justify-end items-center p-6 space-y-2">
-                <div data-lucide="wrench" class="text-white w-8 h-8"></div>
-                <div class="text-white text-2xl font-semibold">Preparation</div>
-                <a href="#" class="text-white text-sm underline">See More</a>
+            <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
+                <div data-lucide="wrench" class="text-white w-10 h-10"></div>
+                <div class="text-white text-4xl font-semibold">Preparation</div>
+                <a href="#" class="text-white text-lg underline">See More</a>
+            </div>
+        </div>
+        <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
+            <img src="Images/green.png" class="w-full h-full object-cover" alt="Finance" />
+            <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
+                <div data-lucide="handshake" class="text-white w-10 h-10"></div>
+                <div class="text-white text-4xl font-semibold">Warranty</div>
+                <a href="#" class="text-white text-lg underline">See More</a>
             </div>
         </div>
     </div>
@@ -155,7 +166,7 @@
                         <div class="mt-1">Customer Satisfaction</div>
                     </div>
                 </div>
-                <div class="max-w-xl space-y-6 border-l-4 border-[#b6a26c] pl-6 bg-white/90 py-8 px-6">
+                <div class="max-w-3xl space-y-6 border-l-4 border-[#b6a26c] pl-6 bg-white/90 py-8 px-6">
                     <h2 class="text-4xl font-bold text-black leading-tight">
                         Precision. Performance. <br class="hidden md:block" />Prestige.
                     </h2>
@@ -184,7 +195,7 @@
 </body>
 
 <!-- Carousel Markup -->
-<div class="bg-[#29343D] pt-6 pb-24">
+<div class="bg-[#29343D] pt-6 pb-16">
     <!-- Centered heading container -->
     <div class="flex justify-center items-center h-24">
         <h2 class="text-white text-3xl font-light tracking-[0.4em]">FEATURED STOCK</h2>
@@ -431,7 +442,168 @@
             </div>
         </div>
     </div>
+
+    <div class="pt-12 flex justify-center">
+        <button class="text-white text-3xl font-light tracking-[0.2em]">
+            View All Stock
+        </button>
+        <i data-lucide="chevron-right"
+            class="w-10 h-10 transform transition-transform group-hover:translate-x-1 text-white" stroke-width="1"></i>
+
+    </div>
 </div>
+
+<div class="bg-[#1e2a32] py-12">
+    <div class="w-[82%] mx-auto grid grid-cols-1 md:grid-cols-3">
+
+        <!-- Card 1 -->
+        <a href="#" class="relative group h-96 w-full overflow-hidden">
+            <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
+                style="background-image: url('https://hips.hearstapps.com/hmg-prod/images/2025-aston-martin-vanquish-120-66d091bddd098.jpg?crop=1xw:1xh;center,top&resize=980:*');">
+            </div>
+            <div class="absolute inset-0 bg-black/40 transition group-hover:bg-black/20"></div>
+            <div class="absolute bottom-4 left-4 text-white z-10">
+                <h3 class="text-2xl font-bold">PREVIOUSLY SOLD</h3>
+                <p class="text-lg">Click to view our previously sold stock</p>
+            </div>
+        </a>
+
+        <!-- Card 2 -->
+        <a href="#" class="relative group h-96 w-full overflow-hidden">
+            <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
+                style="background-image: url('https://preview.redd.it/2uo14andpql21.jpg?width=640&crop=smart&auto=webp&s=d0c9104b37dc1b4f1693517ad0abe2f184d2f805');">
+            </div>
+            <div class="absolute inset-0 bg-black/40 transition group-hover:bg-black/20"></div>
+            <div class="absolute bottom-4 left-4 text-white z-10">
+                <h3 class="text-2xl font-bold">PREVIOUSLY SOLD E92 M3’s</h3>
+                <p class="text-lg">Click to view our previously sold E92 M3s</p>
+            </div>
+        </a>
+
+        <!-- Card 3 -->
+        <a href="#" class="relative group h-96 w-full overflow-hidden">
+            <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
+                style="background-image: url('https://c4.wallpaperflare.com/wallpaper/989/29/290/audi-cars-r8-cars-audi-hd-art-wallpaper-preview.jpg');">
+            </div>
+            <div class="absolute inset-0 bg-black/40 transition group-hover:bg-black/20"></div>
+            <div class="absolute bottom-4 left-4 text-white z-10">
+                <h3 class="text-2xl font-bold">VEHICLE SOURCING</h3>
+                <p class="text-lg">Find out more about our vehicle sourcing</p>
+            </div>
+        </a>
+
+    </div>
+</div>
+
+<footer class="bg-[#29343D] text-[#333] text-sm pt-16 pb-8 text-white">
+    <div class="max-w-screen-xl mx-auto px-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-10 mb-10">
+
+        <!-- Social -->
+        <div>
+            <img src="Images/T1White.png"
+                alt="Tier One Logo" class="h-20 mb-4">
+
+            <div class="space-y-3 text-sm">
+                <!-- Facebook -->
+                <a href="https://facebook.com" target="_blank"
+                    class="flex items-center gap-2 hover:opacity-80 transition">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                        alt="Facebook" class="w-5 h-5" />
+                    <span>Facebook</span>
+                </a>
+
+                <!-- Instagram -->
+                <a href="https://instagram.com" target="_blank"
+                    class="flex items-center gap-2 hover:opacity-80 transition">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
+                        alt="Instagram" class="w-5 h-5 rounded-md" />
+                    <span>Instagram</span>
+                </a>
+            </div>
+        </div>
+
+        <!-- About -->
+        <div>
+            <h4 class="font-semibold text-lg mb-3">About</h4>
+            <ul class="space-y-2">
+                <li><a href="#" class="hover:text-gold transition">Our Story</a></li>
+                <li><a href="#" class="hover:text-gold transition">The Team</a></li>
+                <li><a href="#" class="hover:text-gold transition">Our Values</a></li>
+                <li><a href="#" class="hover:text-gold transition">The History</a></li>
+            </ul>
+        </div>
+
+        <!-- Top Brands -->
+        <div>
+            <h4 class="font-semibold text-lg mb-3">Useful Links</h4>
+            <ul class="space-y-2">
+                <li><a href="#" class="hover:text-gold transition">Privacy Policy</a></li>
+                <li><a href="#" class="hover:text-gold transition">Insurance</a></li>
+                <li><a href="#" class="hover:text-gold transition">Terms & Conditions</a></li>
+                <li><a href="#" class="hover:text-gold transition">Cookies</a></li>
+                <li><a href="#" class="hover:text-gold transition">Complaints</a></li>
+                <li><a href="#" class="hover:text-gold transition">FAQ</a></li>
+            </ul>
+        </div>
+
+        <!-- Opening Times -->
+        <div>
+            <h4 class="flex items-center gap-2 font-semibold text-lg mb-4">
+                Opening Times
+            </h4>
+            <ul class="space-y-1 font-medium text-sm">
+                <li class="flex justify-between">
+                    <span>Monday</span><span>08:00 - 18:00</span>
+                </li>
+                <li class="flex justify-between">
+                    <span>Tuesday</span><span>08:00 - 18:00</span>
+                </li>
+                <li class="flex justify-between">
+                    <span>Wednesday</span><span>08:00 - 18:00</span>
+                </li>
+                <li class="flex justify-between">
+                    <span>Thursday</span><span>08:00 - 18:00</span>
+                </li>
+                <li class="flex justify-between">
+                    <span>Friday</span><span>08:00 - 18:00</span>
+                </li>
+                <li class="flex justify-between">
+                    <span>Saturday</span><span>08:00 - 18:00</span>
+                </li>
+                <li class="flex justify-between">
+                    <span>Sunday</span><span class="text-neutral-500">Appointment Only</span>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="border-t border-neutral-300 pt-6 mt-8 bg">
+        <div
+            class="max-w-screen-xl mx-auto px-6 flex flex-col sm:flex-row justify-between text-xs text-neutral-500 gap-4">
+
+            <!-- Left Side (Legal Text) -->
+            <div class="space-y-1">
+                <p>Tier One Automotive Ltd is a company registered in England and Wales.</p>
+                <p>Company registration number: 08879100</p>
+                <p>
+                    <a href="#" class="underline hover:text-[#b59f61] transition">Cookies</a> |
+                    <a href="#" class="underline hover:text-[#b59f61] transition">Privacy Policy</a>
+                </p>
+            </div>
+
+            <!-- Right Side (Credit) -->
+            <div class="text-sm font-medium">
+                © 2025 Designed & Powered by
+                <a href="https://alexlovelock.dev" class="underline hover:text-[#b59f61] transition">Alex
+                    Lovelock</a>
+            </div>
+
+        </div>
+    </div>
+</footer>
+
+
 <!-- Embla Script -->
 <script src="https://cdn.jsdelivr.net/npm/embla-carousel@8/embla-carousel.umd.js"></script>
 <script>
