feat: tweaking and recolouring

--- a/index2.html
+++ b/index2.html
@@ -98,17 +98,15 @@
     </section>
 
     <!-- Tagline -->
-    <section class="bg-gold text-white py-12 text-center text-2xl tracking-[.25em]">
-        <p>DRIVEN BY PASSION. DEFINED BY PRECISION.</p>
-    </section>
 
-    <div class="flex justify-center items-center pt-10 pb-8 bg-[#29343D]">
+
+    <div class="flex justify-center items-center pt-16 pb-8 bg-[#16181c]">
         <h2 class="text-white text-3xl font-light tracking-[0.4em]">SERVICES</h2>
     </div>
-    <div class="w-full grid grid-cols-1 md:grid-cols-4 gap-4 px-4 py-4 bg-[#29343D]">
-        
+    <div class="w-full grid grid-cols-1 md:grid-cols-4 px-6 gap-8 py-8 bg-[#16181c]">
+
         <!-- Finance Card -->
-        <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
+        <div class="relative h-[800px] overflow-hidden shadow-lg">
             <img src="Images/red.png" class="w-full h-full object-cover" alt="Finance" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="handshake" class="text-white w-10 h-10"></div>
@@ -118,7 +116,7 @@
         </div>
 
         <!-- Sell Your Car Card -->
-        <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
+        <div class="relative h-[800px] overflow-hidden  shadow-lg">
             <img src="Images/yellow.png" class="w-full h-full object-cover" alt="Sell Your Car" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="hand-coins" class="text-white w-10 h-10"></div>
@@ -128,7 +126,7 @@
         </div>
 
         <!-- Preparation Card -->
-        <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
+        <div class="relative h-[800px] overflow-hidden shadow-lg">
             <img src="Images/blue.png" class="w-full h-full object-cover" alt="Preparation" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="wrench" class="text-white w-10 h-10"></div>
@@ -136,7 +134,7 @@
                 <a href="#" class="text-white text-lg underline">See More</a>
             </div>
         </div>
-        <div class="relative h-[800px] overflow-hidden rounded-lg shadow-lg">
+        <div class="relative h-[800px] overflow-hidden shadow-lg">
             <img src="Images/green.png" class="w-full h-full object-cover" alt="Finance" />
             <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-end items-center p-6 space-y-2">
                 <div data-lucide="handshake" class="text-white w-10 h-10"></div>
@@ -148,39 +146,39 @@
 
 
 
-    <section class="relative w-full bg-white text-black overflow-hidden">
+    <section class="relative w-full bg-[#202329] text-gray-300 overflow-hidden">
         <div class="grid grid-cols-1 lg:grid-cols-2 items-center relative z-10">
             <!-- Text Content -->
             <div class="relative px-6 sm:px-12 lg:px-20 flex gap-10 items-start">
-                <div class="hidden lg:flex flex-col gap-8 pt-8 text-xl text-gray-600">
+                <div class="hidden lg:flex flex-col gap-8 pt-8 text-xl">
                     <div class="text-left">
-                        <div class="text-xl font-semibold text-black">320+</div>
+                        <div class="text-xl font-semibold ">320+</div>
                         <div class="mt-1">Vehicles in Stock</div>
                     </div>
                     <div class="text-left">
-                        <div class="text-xl font-semibold text-black">12 Years</div>
+                        <div class="text-xl font-semibold ">12 Years</div>
                         <div class="mt-1">Industry Expertise</div>
                     </div>
                     <div class="text-left">
-                        <div class="text-xl font-semibold text-black">5★</div>
+                        <div class="text-xl font-semibold ">5★</div>
                         <div class="mt-1">Customer Satisfaction</div>
                     </div>
                 </div>
-                <div class="max-w-3xl space-y-6 border-l-4 border-[#b6a26c] pl-6 bg-white/90 py-8 px-6">
-                    <h2 class="text-4xl font-bold text-black leading-tight">
+                <div class="max-w-3xl space-y-6 border-l-4 border-[#b6a26c] pl-6 py-8 px-6">
+                    <h2 class="text-4xl font-bold leading-tight">
                         Precision. Performance. <br class="hidden md:block" />Prestige.
                     </h2>
-                    <p class="text-xl text-gray-700">
+                    <p class="text-xl ">
                         Tier One Automotive was founded by Alex Pope after over a decade of experience in one of
                         the
                         UK’s most respected independent dealerships.
                     </p>
-                    <p class="text-xl text-gray-700">
+                    <p class="text-xl">
                         Our curated range is hand-selected and obsessively prepared — tailored for discerning
                         clients
                         who value service, excellence, and discretion.
                     </p>
-                    <p class="text-xl font-semibold text-black">
+                    <p class="text-xl font-semibold ">
                         Kings Langley showroom — 5 minutes off the M25. Nationwide delivery available.
                     </p>
                 </div>
@@ -195,9 +193,9 @@
 </body>
 
 <!-- Carousel Markup -->
-<div class="bg-[#29343D] pt-6 pb-16">
+<div class="bg-[#16181c] pt-6 pb-16">
     <!-- Centered heading container -->
-    <div class="flex justify-center items-center h-24">
+    <div class="flex justify-center items-center h-24 pb-4">
         <h2 class="text-white text-3xl font-light tracking-[0.4em]">FEATURED STOCK</h2>
     </div>
 
@@ -207,13 +205,13 @@
                 <div class="embla__slide">
                     <div class="card flex flex-col  rounded-lg shadow-md overflow-hidden">
                         <!-- Top Half: Car Image -->
-                        <div class="h-[240px] ">
+                        <div class="h-[240px] bg-[#202329]">
                             <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg"
                                 alt="Porsche Cayman GT4" class="w-full h-full object-cover object-[center_-110px]" />
                         </div>
 
                         <!-- Bottom Half: Info Panel -->
-                        <div class="h-[185px] bg-[#36434F] text-white flex flex-col justify-between p-4 text-md">
+                        <div class="h-[185px] bg-[#202329] text-white flex flex-col justify-between p-4 text-md">
                             <div>
                                 <div class="text-xl font-semibold leading-tight text-left">PORSCHE CAYMAN 981 GT4</div>
                                 <div class="text-lg text-gray-300 text-left">3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6
@@ -247,13 +245,13 @@
                 <div class="embla__slide">
                     <div class="card flex flex-col  rounded-lg shadow-md overflow-hidden">
                         <!-- Top Half: Car Image -->
-                        <div class="h-[240px] ">
+                        <div class="h-[240px] bg-[#202329]">
                             <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg"
                                 alt="Porsche Cayman GT4" class="w-full h-full object-cover object-[center_-110px]" />
                         </div>
 
                         <!-- Bottom Half: Info Panel -->
-                        <div class="h-[185px] bg-[#36434F] text-white flex flex-col justify-between p-4 text-md">
+                        <div class="h-[185px] bg-[#202329] text-white flex flex-col justify-between p-4 text-md">
                             <div>
                                 <div class="text-xl font-semibold leading-tight text-left">PORSCHE CAYMAN 981 GT4</div>
                                 <div class="text-lg text-gray-300 text-left">3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6
@@ -286,13 +284,13 @@
                 <div class="embla__slide">
                     <div class="card flex flex-col  rounded-lg shadow-md overflow-hidden">
                         <!-- Top Half: Car Image -->
-                        <div class="h-[240px] ">
+                        <div class="h-[240px] bg-[#202329]">
                             <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg"
                                 alt="Porsche Cayman GT4" class="w-full h-full object-cover object-[center_-110px]" />
                         </div>
 
                         <!-- Bottom Half: Info Panel -->
-                        <div class="h-[185px] bg-[#36434F] text-white flex flex-col justify-between p-4 text-md">
+                        <div class="h-[185px] bg-[#202329] text-white flex flex-col justify-between p-4 text-md">
                             <div>
                                 <div class="text-xl font-semibold leading-tight text-left">PORSCHE CAYMAN 981 GT4</div>
                                 <div class="text-lg text-gray-300 text-left">3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6
@@ -325,13 +323,13 @@
                 <div class="embla__slide">
                     <div class="card flex flex-col  rounded-lg shadow-md overflow-hidden">
                         <!-- Top Half: Car Image -->
-                        <div class="h-[240px] ">
+                        <div class="h-[240px] bg-[#202329]">
                             <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg"
                                 alt="Porsche Cayman GT4" class="w-full h-full object-cover object-[center_-110px]" />
                         </div>
 
                         <!-- Bottom Half: Info Panel -->
-                        <div class="h-[185px] bg-[#36434F] text-white flex flex-col justify-between p-4 text-md">
+                        <div class="h-[185px] bg-[#202329] text-white flex flex-col justify-between p-4 text-md">
                             <div>
                                 <div class="text-xl font-semibold leading-tight text-left">PORSCHE CAYMAN 981 GT4</div>
                                 <div class="text-lg text-gray-300 text-left">3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6
@@ -364,13 +362,13 @@
                 <div class="embla__slide">
                     <div class="card flex flex-col  rounded-lg shadow-md overflow-hidden">
                         <!-- Top Half: Car Image -->
-                        <div class="h-[240px] ">
+                        <div class="h-[240px] bg-[#202329]">
                             <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg"
                                 alt="Porsche Cayman GT4" class="w-full h-full object-cover object-[center_-110px]" />
                         </div>
 
                         <!-- Bottom Half: Info Panel -->
-                        <div class="h-[185px] bg-[#36434F] text-white flex flex-col justify-between p-4 text-md">
+                        <div class="h-[185px] bg-[#202329] text-white flex flex-col justify-between p-4 text-md">
                             <div>
                                 <div class="text-xl font-semibold leading-tight text-left">PORSCHE CAYMAN 981 GT4</div>
                                 <div class="text-lg text-gray-300 text-left">3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6
@@ -403,13 +401,13 @@
                 <div class="embla__slide">
                     <div class="card flex flex-col  rounded-lg shadow-md overflow-hidden">
                         <!-- Top Half: Car Image -->
-                        <div class="h-[240px] ">
+                        <div class="h-[240px] bg-[#202329]">
                             <img src="https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg"
                                 alt="Porsche Cayman GT4" class="w-full h-full object-cover object-[center_-110px]" />
                         </div>
 
                         <!-- Bottom Half: Info Panel -->
-                        <div class="h-[185px] bg-[#36434F] text-white flex flex-col justify-between p-4 text-md">
+                        <div class="h-[185px] bg-[#202329] text-white flex flex-col justify-between p-4 text-md">
                             <div>
                                 <div class="text-xl font-semibold leading-tight text-left">PORSCHE CAYMAN 981 GT4</div>
                                 <div class="text-lg text-gray-300 text-left">3.8 981 GT4 Coupe 2dr Petrol Manual Euro 6
@@ -453,7 +451,7 @@
     </div>
 </div>
 
-<div class="bg-[#1e2a32] py-12">
+<div class="bg-[#1a1c21] py-10">
     <div class="w-[82%] mx-auto grid grid-cols-1 md:grid-cols-3">
 
         <!-- Card 1 -->
@@ -495,13 +493,12 @@
     </div>
 </div>
 
-<footer class="bg-[#29343D] text-[#333] text-sm pt-16 pb-8 text-white">
+<footer class="bg-[#16181c] text-[#333] text-sm pt-16 pb-8 text-white">
     <div class="max-w-screen-xl mx-auto px-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-10 mb-10">
 
         <!-- Social -->
         <div>
-            <img src="Images/T1White.png"
-                alt="Tier One Logo" class="h-20 mb-4">
+            <img src="Images/T1White.png" alt="Tier One Logo" class="h-20 mb-4">
 
             <div class="space-y-3 text-sm">
                 <!-- Facebook -->
@@ -515,8 +512,8 @@
                 <!-- Instagram -->
                 <a href="https://instagram.com" target="_blank"
                     class="flex items-center gap-2 hover:opacity-80 transition">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
-                        alt="Instagram" class="w-5 h-5 rounded-md" />
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
+                        class="w-5 h-5 rounded-md" />
                     <span>Instagram</span>
                 </a>
             </div>
